internal/xds/translator/testdata/out/xds-ir-sublinear/xds-name-scheme-v1.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http1
  virtualHosts:
  - domains:
    - foo.net
    name: envoy-gateway/gateway-1/http1/foo_net
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
  - domains:
    - bar.net
    name: envoy-gateway/gateway-1/http2/bar_net
    routes:
    - match:
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/https1
  virtualHosts:
  - domains:
    - foo.com
    name: envoy-gateway/gateway-1/https1/foo_com
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/https2
  virtualHosts:
  - domains:
    - bar.com
    name: envoy-gateway/gateway-1/https2/bar_com
    routes:
    - match:
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-2/https-http3
  virtualHosts:
  - domains:
    - '*'
    name: envoy-gateway/gateway-2/https-http3/*
    routes:
    - match:
        prefix: /
      name: httproute/default/httproute-1/rule/0/match/0/*
      responseHeadersToAdd:
      - append: true
        header:
          key: alt-svc
          value: h3=":1443"; ma=86400
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
